fix: picture overflow its container

--- a/src/components/upload-modal/upload-modal.scss
+++ b/src/components/upload-modal/upload-modal.scss
@@ -8,16 +8,26 @@
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2), -1px -1px 3px rgba(0, 0, 0, 0.2);
 }
 
+.file-preview {
+  height: auto;
+  width: 100%;
+  overflow-y: hidden;
+  img {
+    max-width: calc(100% - 2rem);
+    max-height: 80%;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .upload-modal-container {
-    width: 50%;
-    left: 25%;
+    width: 60%;
+    left: 20%;
   }
   .file-preview {
-    width: 90%;
-    left: 5%;
+    left: 12.5%;
     height: calc(100% - 10rem);
     img {
+      max-width: calc(100% - 1rem);
       max-height: 80%;
     }
   }
